--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogs",
+  "name": "single-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
-    "next": "14.2.1",
-    "react": "^18",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.3.0"
   }
 }
